--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.3",
@@ -17,6 +18,7 @@
     "axios": "^1.7.9",
     "expo": "~52.0.18",
     "expo-checkbox": "~4.0.0",
+    "expo-linear-gradient": "^14.0.1",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
     "react": "18.3.1",
