--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
     "react-native-progress": "^5.0.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-reanimated": "^3.16.2",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "^0.19.13",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
     "zustand": "^4.4.7"
