--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postinstall": "npx tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css"
   },
   "dependencies": {
+    "@expo/html-elements": "^0.11.2",
     "@hookform/resolvers": "^4.1.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "^2.11.0",
@@ -58,7 +59,6 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/react": "~18.3.12",
-    "lightningcss-darwin-arm64": "^1.29.3",
     "typescript": "^5.3.3"
   },
   "private": true
