--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/html-elements": "^0.11.2",
+    "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^4.1.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "^2.11.0",
@@ -30,6 +31,7 @@
     "@supabase/supabase-js": "^2.49.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.7",
     "expo": "^52.0.25",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.4",
@@ -38,6 +40,7 @@
     "expo-splash-screen": "~0.29.20",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
+    "lucide-react": "^0.487.0",
     "lucide-react-native": "^0.378.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
